Put code in JS files

--- a/evolve-all-the-pidgies.html
+++ b/evolve-all-the-pidgies.html
@@ -19,85 +19,7 @@
             <p id="outEvolve"></p>
         </div>
     </form>
-    <script>
-        window.onload = function () {
-            var outTransfer = document.getElementById('outTransfer');
-            var outEvolve = document.getElementById('outEvolve');
-            pidgyCalculator.init(outTransfer, outEvolve);
-
-            document.getElementById('btnCalc').addEventListener('click', function() {
-                var pidgies = document.getElementById('txtPidgies').value;
-                var candies = document.getElementById('txtCandies').value;
-                pidgyCalculator.calculate(pidgies, candies, true); //temp force 'true'
-            });
-        }
-
-        var pidgyCalculator = function() {
-            var outputCtrl,
-                pokemon,
-                candy,
-                transferBonus,
-                transferCnt,
-                evolvedCnt,
-                evolutionCost,
-                outTransfer,
-                outEvolve,
-
-                init = function(transferCtrl, evolvedCtrl) {
-                    outTransfer = transferCtrl,
-                    outEvolve = evolvedCtrl,
-                    evolvedCnt = 0,
-                    evolutionCost = 12,
-                    transferCnt = 0;
-                },
-
-                calculate = function(pokemonCnt, candyCnt, transferAfter) {
-                    pokemon = pokemonCnt;
-                    candy = candyCnt;
-                    transferBonus = transferAfter | 0; // cast bool as 0 or 1
-
-                    while (true) {
-                        if (pokemon >= 1) {
-                            if (candy >= evolutionCost) {
-                                evolve();
-                            } else if (candy + pokemon > evolutionCost) {
-                                transfer();
-                                evolve();
-                            } else {
-                                transferCnt = pokemon;
-                                break;
-                            }
-                        } else {
-                            break;
-                        }
-                    }
-                    setOutput();
-                },
-
-                evolve = function() {
-                    pokemon--;
-                    // cost 12 for candy, but get 1 candy on evolve, 
-                    // plus bonus if transferred
-                    candy -= 11 - transferBonus;
-                    evolvedCnt++;
-                },
-
-                transfer = function() {
-                    pokemon--;
-                    candy++;
-                },
-
-                setOutput = function() {
-                    outTransfer.innerHTML = "First transfer " + transferCnt + " pidgies.";
-                    outEvolve.innerHTML = "Then, evolve " + evolvedCnt + " pidgies.";
-                };
-
-                return {
-                    init: init,
-                    calculate: calculate
-                };
-        }();
-        
-    </script>
+    <script src="js/pidgy.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
