--- a/evolve-all-the-pidgies.html
+++ b/evolve-all-the-pidgies.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Evolve all the pidgies!</title>
+    <link rel="stylesheet" type="text/css" href="css/pidgies.css" />
 </head>
+
 <body>
-    <form action="">
-        <label>Pidgies</label>
-        <input type="number" id="txtPidgies" value="3" />
+    <header>
+        <h1>Evolve all the pidgies!</h1>
+    </header>
+    <section class="main-content">
+        <form action="">
+            <div class="input-container">
+                <label>Pidgies</label>
+                <input type="number" id="txtPidgies" value="3" />
+            </div>
+            <div class="input-container">
+                <label>Candies</label>
+                <input type="number" id="txtCandies" value="32" />
+            </div>
 
-        <label>Candies</label>
-        <input type="number" id="txtCandies" value="32" />
+            <input type="image" src="img/pokeball.png" id="btnCalc" />
 
-        <button type="button" id="btnCalc">Calculate</button>
+            <div id="output">
+                <p id="outTransfer"></p>
+                <p id="outEvolve"></p>
+            </div>
+        </form>
+    </section>
+    <footer>
+        <p>Written by Jake Carpenter</p>
+        <p>
+            <a href="http://github.com/carpjaco/pidgies">Github</a>
+        </p>
+    </footer>
 
-        <div id="output">
-            <p id="outTransfer"></p>
-            <p id="outEvolve"></p>
-        </div>
-    </form>
     <script src="js/pidgy.js"></script>
     <script src="js/app.js"></script>
 </body>
+
 </html>
