--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Evolve all the pidgies!</title>
+    <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/pidgies.css" />
 </head>
 
@@ -15,11 +16,11 @@
         <form action="">
             <div class="input-container">
                 <label>Pidgies</label>
-                <input type="number" id="txtPidgies" value="3" />
+                <input type="number" id="txtPidgies" value="0" />
             </div>
             <div class="input-container">
                 <label>Candies</label>
-                <input type="number" id="txtCandies" value="32" />
+                <input type="number" id="txtCandies" value="0" />
             </div>
 
             <input type="image" src="img/pokeball.png" id="btnCalc" />
