Make Pokeball spin and sticky footer.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="number" id="txtCandies" value="0" />
             </div>
 
-            <input type="image" src="img/pokeball.png" id="btnCalc" />
+            <img src="img/pokeball.png" id="btnCalc" alt="Calculate" />
 
             <div id="output">
                 <p id="outTransfer"></p>
@@ -32,9 +32,10 @@
         </form>
     </section>
     <footer>
-        <p>Written by Jake Carpenter</p>
         <p>
-            <a href="http://github.com/carpjaco/pidgies">Github</a>
+            <a href="http://github.com/carpjaco/pidgies">
+                <img src="img/github.png" alt="Github" id="git-link" />
+            </a>
         </p>
     </footer>
 
