Add detail to text output

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 
             <img src="img/pokeball.png" id="btnCalc" alt="Calculate" />
 
-            <div id="output">
+            <ul id="pidgyOutput"></ul>
+            <!--<div id="output">
                 <p id="outTransfer"></p>
                 <p id="outEvolve"></p>
-            </div>
+            </div>-->
         </form>
     </section>
     <footer>
