Add text-shadow on header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <h1>Evolve all the pidgies!</h1>
     </header>
-    <section class="main-content">
-        <form action="">
+    <main>
+        <form>
             <div class="input-container">
                 <label>Pidgies</label>
                 <input type="number" id="txtPidgies" value="0" />
@@ -24,16 +24,16 @@
             </div>
 
             <img src="img/pokeball.png" id="btnCalc" alt="Calculate" />
-
-            <ul id="pidgyOutput"></ul>
         </form>
-    </section>
+        <ul id="pidgyOutput"></ul>
+    </main>
     <footer>
         <p>
             <a href="http://github.com/carpjaco/pidgies">
                 <img src="img/github.png" alt="Github" id="git-link" />
             </a>
         </p>
+        <p>v1.0</p>
     </footer>
 
     <script src="js/pidgy.js"></script>
