--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <h1>Evolve all the pidgies!</h1>
+        <h1>
+            <a href="index.html">Evolve all the pidgies!</a>
+        </h1>
     </header>
     <main>
         <form>
@@ -28,12 +30,10 @@
         <ul id="pidgyOutput"></ul>
     </main>
     <footer>
-        <p>
-            <a href="http://github.com/carpjaco/pidgies">
-                <img src="img/github.png" alt="Github" id="git-link" />
-            </a>
-        </p>
-        <p>v1.0</p>
+        <h3><a href="about.html">About</a></h3>
+        <a href="http://github.com/carpjaco/pidgies">
+            <img src="img/github.png" alt="Github" id="git-link" />
+        </a>
     </footer>
 
     <script src="js/pidgy.js"></script>
