--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <form>
             <div class="input-container">
                 <label>Pidgies</label>
-                <input type="number" id="txtPidgies" value="0" pattern=”[0-9]*/>
+                <input type="tel" id="txtPidgies" value="0" pattern=”[0-9]*/>
             </div>
             <div class="input-container">
                 <label>Candies</label>
-                <input type="number" id="txtCandies" value="0" pattern=”[0-9]*/>
+                <input type="tel" id="txtCandies" value="0" pattern=”[0-9]*/>
             </div>
 
             <img src="img/pokeball.png" id="btnCalc" alt="Calculate" />
