Add option to not transfer pidgy after evolving

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
         <p class="description">
             This is a calculator to determine the most efficient action to take with your Pidgies in Pokemon Go. To use it, simply enter
             the number of Pidgies and Pidgy candies that you have, then click the pokeball. Calculated instructions are then
-            displayed below the pokeball. It does assume that you are transferring the evolved Pidgies (Pidgeotto) as you're
-            evolving them.
+            displayed below the pokeball. If you plan to transfer the resulting Pidgeotto for an additional candy, leave the option to
+            "Transfer after evolving?" on, and it will consider that in the calculation.
         </p>
 
         <h2>FAQ</h2>
@@ -37,6 +37,7 @@
                 It is open source, you are free to download the source and change it however you like.</p>
     </main>
     <footer>
+        <h3><a href="index.html">Home</a></h3>
         <a href="http://github.com/carpjaco/pidgies">
             <img src="img/github.png" alt="Github" id="git-link" />
         </a>
