--- a/index.html
+++ b/index.html
@@ -26,22 +26,20 @@
             </div>
             <p class="checkbox-label">Transfer after evolving?</p>
             <div class="flipswitch-container">
-                <div class="flipswitch">
-                    <input type="checkbox" name="flipswitch" class="flipswitch-cb" id="chkTransfer" checked>
-                    <label class="flipswitch-label" for="chkTransfer">
-                        <div class="flipswitch-inner"></div>
-                        <div class="flipswitch-switch"></div>
+                <div class="onoffswitch">
+                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="chkTransfer" checked>
+                    <label class="onoffswitch-label" for="myonoffswitch">
+                        <span class="onoffswitch-inner"></span>
+                        <span class="onoffswitch-switch"></span>
                     </label>
                 </div>
             </div>
-            
-            
             <img src="img/pokeball.png" id="btnCalc" alt="Calculate" />
         </form>
         <ul id="pidgyOutput"></ul>
     </main>
     <footer>
-        <h3><a href="about.html">About</a></h3>
+        <h2><a href="about.html">About</a></h2>
         <a href="http://github.com/carpjaco/pidgies">
             <img src="img/github.png" alt="Github" id="git-link" />
         </a>
