--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <img src="img/pokeball.png" id="btnCalc" alt="Calculate" />
         </form>
-        <ul id="pidgyOutput"></ul>
+        <ol id="pidgyOutput"></ol>
     </main>
     <footer>
         <h2><a href="about.html">About</a></h2>
