--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="flipswitch-container">
                 <div class="onoffswitch">
                     <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="chkTransfer" checked>
-                    <label class="onoffswitch-label" for="myonoffswitch">
+                    <label class="onoffswitch-label" for="chkTransfer">
                         <span class="onoffswitch-inner"></span>
                         <span class="onoffswitch-switch"></span>
                     </label>
